--- a/ansible/roles/kiosk/tasks/debug_console.yml
+++ b/ansible/roles/kiosk/tasks/debug_console.yml
@@ -5,7 +5,7 @@
     dest: /etc/systemd/journald.conf
     section: Journal
     option: ForwardToConsole
-    value: yes
+    value: 'yes'
   notify:
     - restart systemd-journald
 
