--- a/ansible/roles/kiosk/tasks/firefox.yml
+++ b/ansible/roles/kiosk/tasks/firefox.yml
@@ -25,7 +25,15 @@
 - name: "Firefox Profile: Create"
   become: true
   become_user: "{{ kiosk_user }}"
-  command: /usr/bin/rsync -qrlt /usr/share/firefox-esr/browser/defaults/preferences/ /home/{{ kiosk_user }}/.mozilla/firefox/kiosk/
+  synchronize:
+    archive: false
+    dest: /home/{{ kiosk_user }}/.mozilla/firefox/kiosk/
+    links: true
+    mode: pull
+    recursive: true
+    src: /usr/share/firefox-esr/browser/defaults/preferences/
+    times: true
+  delegate_to: "{{ inventory_hostname }}"
   when: not firefox_profile.stat.exists
   notify: restart LightDM
 
