--- a/ansible/roles/kiosk/vars/midori.yml
+++ b/ansible/roles/kiosk/vars/midori.yml
@@ -1,2 +1,2 @@
 ---
-kiosk_browser_command: "midori -p -e Fullscreen -a {{ kiosk_url }}"
+kiosk_browser_command: "midori -p -e Fullscreen -a {{ kiosk_urls | join(' ') }}"
