--- a/ansible/roles/kiosk/vars/firefox.yml
+++ b/ansible/roles/kiosk/vars/firefox.yml
@@ -1,2 +1,2 @@
 ---
-kiosk_browser_command: "firefox -P kiosk --private-window {{ kiosk_url }}"
+kiosk_browser_command: "firefox -P kiosk -private {{ kiosk_urls | join(' ') }}"
