Systemd timer and service for browser tab switch
* unclutter installs its own startup script, don't need to do it as part
of our autostart
* switch to systemd for all services

Partial for #2

--- a/ansible/roles/kiosk/defaults/main.yml
+++ b/ansible/roles/kiosk/defaults/main.yml
@@ -41,3 +41,6 @@ kiosk_display_refresh:
   hour: '7-18'
   minute: '0'
   weekday: '1-5'
+
+kiosk_browser_tab_switch_calendar:
+  - "Mon..Fri *-*-* 08..18:*:00/15"
