Chromium browser package and executable name wrong

--- a/ansible/roles/kiosk/tasks/chromium.yml
+++ b/ansible/roles/kiosk/tasks/chromium.yml
@@ -2,6 +2,6 @@
 - name: "Chromium: Install"
   become: true
   apt:
-    name: chromium
+    name: chromium-browser
     state: present
   notify: restart LightDM
