Update contents to Ansible 2.9.9

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -14,7 +14,7 @@
     - role: timesync
       tags:
         - timesync
-    - role: bdellegrazie.ca-certificates
+    - role: bdellegrazie.ca_certificates
       tags:
         - cacerts
     - role: jnv.unattended-upgrades
