--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks.git
-    rev: v2.4.0
+    rev: v3.1.0
     hooks:
       - id: trailing-whitespace
         files: \.(js|rb|md|py|sh|txt|yaml|yml)$
@@ -11,11 +11,11 @@ repos:
         files: \.(js|rb|md|py|sh|txt|yaml|yml)$
       - id: check-symlinks
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.20.0
+    rev: v1.23.0
     hooks:
       - id: yamllint
   - repo: https://github.com/ansible/ansible-lint.git
-    rev: v4.2.0
+    rev: v4.3.0a1
     hooks:
       - id: ansible-lint
         always_run: true
