--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,5 +1,5 @@
 ---
-- name: 'bdellegrazie.ca-certificates'
-  version: 'v3.1.0'
+- name: 'bdellegrazie.ca_certificates'
+  version: 'v3.1.1'
 - name: 'jnv.unattended-upgrades'
   version: 'v1.8.0'
